Fix progress alignment.

--- a/dlgr/griduniverse/static/styles/styles.css
+++ b/dlgr/griduniverse/static/styles/styles.css
@@ -11,6 +11,10 @@
     border: 1px solid #9b4dca;
 }
 
+#progress-percentage {
+    vertical-align: top;
+}
+
 #dashboard { }
 
 .GroupIndicator {
